# audience

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  cliff.toml  eslint.config.js  index.html  justfile  package-lock.json  package.json  prek.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/: dependabot.yml
.github/agents/: agentic-workflows.agent.md
.github/workflows/: automerge.yml  ci.yml  copilot-setup-steps.yml  release.yml
06/132d82a078/: metadata.json
1e/a894c37dc7/: metadata.json
docs/: creating-a-test-release.md  e2e-testing-design.md  ptz-controls-improvement-plan.md
scripts/: update-package-managers.sh  version-bump.mjs
shared/: types.ts
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/birddog/: client.rs
src-tauri/src/commands/: endpoints.rs  mod.rs  presets.rs  ptz.rs  settings.rs  video.rs
src-tauri/src/ndi/: finder.rs  mod.rs  ptz.rs  receiver.rs
src-tauri/src/panasonic/: client.rs
src-tauri/src/persistence/: config.rs  profiles.rs
src-tauri/src/ptz/: controller.rs  endpoint_manager.rs  mod.rs  types.rs
src-tauri/src/simulator/: client.rs
src-tauri/src/video/: mjpeg_server.rs  mod.rs  ndi_source.rs
src-tauri/src/visca/: client.rs  commands.rs
src/components/: EndpointManager.tsx  JoystickPad.tsx  PresetEditor.tsx  PresetList.tsx  PresetOverlay.tsx  PtzControls.tsx  SettingsPanel.tsx  SimulatedFeed.tsx  SourcePicker.tsx  (+3 more)
(+23 files in other folders)
