[package]
name = "audience"
version = "1.0.3"
description = "Cross-platform PTZ camera controller"
authors = ["Audience Contributors"]
edition = "2021"

[lib]
name = "audience_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
thiserror = "2"
